###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
bazel_dep(name = "rules_cc", version = "0.1.4")

bazel_dep(name = "hedron_compile_commands", version = "0.6.1")
local_path_override(
    module_name = "hedron_compile_commands",
    path = "../bazel-compile-commands-extractor",
)
